# flin-google-search-console-mcp

./: .env.example  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: mcp-usage-guide.md  release.md  testing.md
docs/plans/: 2026-04-21-google-search-console-mcp-design.md  2026-04-21-google-search-console-mcp.md
src/flin_google_search_console_mcp/: __init__.py  auth.py  config.py  search_console.py  server.py
tests/: test_auth.py  test_config.py  test_package.py  test_search_console.py  test_server_tools.py
